--- a/extension/blossom-extension/src/components/CardTemplateComponent.css
+++ b/extension/blossom-extension/src/components/CardTemplateComponent.css
@@ -1,12 +1,14 @@
 #cardBody {
-    width: 195px;
-    height: 284px;
+    width: 200px;
+    height: 300px;
     background-image: url("../../static/CardTemplate.png");
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     color: black;
     font-family: sans-serif;
     font-size: x-small;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -15,26 +17,51 @@
 #cardHeader {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 2px 10px;
     color: white;
+    position: absolute;
+    top: 5px;
+    width: 90%;
+    z-index: 2;
 }
 
-#dmg, #hp {
+.cardInput {
     background-color: rgba(0, 0, 0, 0.5);
+    border: none;
+    color: white;
     padding: 2px 5px;
     border-radius: 3px;
+    font-size: small;
+    text-align: center;
+    width: 45%;
 }
 
 #cardImageContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50%;
+    height: 60%;
+    width: 100%;
+    position: static;
+    z-index: 1;
+    overflow: hidden;
 }
 
 #cardImage {
-    max-width: 90%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#name {
+    position: absolute;
+    font-size: large;
+    top: 60%;
+    width: 95%;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    z-index: 2;
+    padding: 2px 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border: none;
 }
 
 #cardFooter {
@@ -44,13 +71,13 @@
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
-    border-top: 1px solid #d3d3d3;
-    margin-bottom: 10%;
-}
-
-#name {
-    font-weight: bold;
-    margin-bottom: 5px;
+    position: absolute;
+    bottom: 10px;
+    width: 90%;
+    height: 25%;
+    z-index: 2;
+    left: 10px;
+    font-size: small;
 }
 
 #abilityName {
@@ -65,4 +92,18 @@
 
 #tp {
     margin-top: 5px;
+}
+
+.submitButton {
+    margin-top: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border: none;
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.submitButton:hover {
+    background-color: rgba(0, 0, 0, 0.7);
 }
