--- a/extension/blossom-extension/src/components/CardTemplateComponent.css
+++ b/extension/blossom-extension/src/components/CardTemplateComponent.css
@@ -1,7 +1,7 @@
 #cardBody {
     width: 200px;
     height: 300px;
-    background-image: url("../../static/CardTemplate.png");
+    background-image: url("../static/CardTemplate.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -21,7 +21,7 @@
     color: white;
     position: absolute;
     top: 5px;
-    width: 100%;
+    width: 90%;
     z-index: 2;
 }
 
@@ -39,7 +39,8 @@
 #cardImageContainer {
     height: 60%;
     width: 100%;
-    position: static;
+    position: absolute;
+    top: 0;
     z-index: 1;
     overflow: hidden;
 }
@@ -48,6 +49,15 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+#templateImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
 }
 
 #name {
@@ -60,7 +70,7 @@
     text-align: center;
     font-weight: bold;
     color: white;
-    z-index: 2;
+    z-index: 3;
     padding: 2px 5px;
     border: none;
 }
@@ -76,6 +86,7 @@
     height: 25%;
     left: 25px;
     font-size: small;
+    z-index: 3;
 }
 
 #abilityName {
@@ -96,7 +107,7 @@
     resize: none;
 }
 
-#tpEncapsulation{
+#tpEncapsulation {
     width: 100%;
     display: flex;
     justify-content: center;
